--- a/PaginaWeb/CarritoCompra/style-carrito.css
+++ b/PaginaWeb/CarritoCompra/style-carrito.css
@@ -1,12 +1,12 @@
 .reservas-carrito{
     display: grid;
     grid-template-areas: 
-    "pasos pasos pasos"
-    "side content content";
-    /*grid-template-columns: 33.33333%;*/
+    "pasos pasos"
+    "side content";
+    grid-template-columns: 1fr 2fr;
     grid-gap: 10px;
     width: 80%;
-    margin:3px auto;
+    margin: auto;
     
 }
 .pasos-carrito{
@@ -15,8 +15,8 @@
 }
 aside{
     grid-area:side;
-    
-    
+    display:flex;
+    flex-direction: column;
     
 }
 .contenido-carrito{
@@ -28,9 +28,60 @@ aside{
 }
 
 .box-carrito{/*Estas reglas se establecerán para el estilo que tendrán todas los elementos de las cajas del carrito, que mantienen el mismo estilo*/
-    border-style: solid;
+    border:1px solid rgba(0, 0, 0, 0.208);
+    padding:5px;
+    border-radius: 10px;
     margin-top: 4px;
+    align-items: center;
 }
+.box-carrito > div{
+    margin:10px;
+}
+.box-usuario{
+    display: flex;
+    padding: 10px;
+}
+.datos-personales{
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+    
+    justify-content: space-around;
+    
+}
+
+.input-datos-personales{
+    width: 40%;
+    height: 36px;
+    margin: 5px;
+}
+
+.nombre-datos-personales{
+    display: flex;
+    justify-content: space-between;
+    
+}
+
 .asterisco-obligatorio{
     color:red;
+}
+
+.img-perfil{
+    width: 40px;
+    height: 40px;
+}
+@media screen and (max-width:1240px){
+    .reservas-carrito{
+        width: 100%;
+    }
+}
+@media screen and (max-width:700px){
+    .reservas-carrito{
+        width: 100%;
+        grid-template-areas: 
+        "pasos"
+        "side"
+        "content";
+        grid-template-columns: 1fr;
+    }
 }
