--- a/PaginaWeb/css/style.css
+++ b/PaginaWeb/css/style.css
@@ -1,13 +1,14 @@
 @import "colors.css";
 body{
-    background: linear-gradient(var(--color-principal),white);
+    background: linear-gradient(0deg,white 20%, var(--color-principal) 20% );
     background-repeat: no-repeat;
-    
+    font-family: sans-serif;
    
 }
 .container{
-    font-family: sans-serif;
-    background-color: var(--color-principal);
+    
+
+    
     max-width: 1200px;
     margin: 0px auto;
 }
@@ -16,29 +17,43 @@ body{
     color:white;
     
     padding:var(--bui_spacing_3x);
-    background-color: var(--color-principal);
+    
 }
 
 nav#cabecera-nav{
     display:flex;
     align-items: center;
-    justify-content: space-around;
-    
+    justify-content: space-between;
     
 }
+
 .title{
-    width: 50%;
     padding:8px 16px 8px;
 }
-svg{
-    width: 20px;
-    color:white;
-    vertical-align: middle;
+#botones-header{
+    display:flex;
 }
+#img-bandera{
+    border-radius: 50%;
+    width: 24px;
+    height: 24px;
+}
+.header svg{
+    fill:white;
+    width: 20px;
+    height: 20px;
+    
+    
+}
+
 #botones-header{
     display: flex;
     justify-content: space-around;
 
+}
+#botones-header >a{
+    display:flex;
+    align-items: center;
 }
 .seleccion{
     background-color: transparent;
@@ -46,9 +61,12 @@ svg{
     color:white;
     padding: 8px 12px;
     cursor: pointer;
+    width: auto;
+    
 }
 .alojamiento{
     text-decoration: none;
+    
 }
 .seleccion:hover{
     background-color: rgba(255, 255, 255, 0.1);
@@ -60,14 +78,26 @@ a.formulario{
     border-radius: 2px;
     padding:4px 12px;
     margin:5px;
-    text-align: center;
+    
+    
 }
-#button-flights{
+.navegacion-flights{
+    border-radius: 32px;
     border:white solid 3px;
+    width: fit-content;
+}
+
+#button-flights{
+    display:flex;
+    justify-content: space-evenly;
     color:white;
-    border-radius: 8px;
     text-decoration: none;
-    padding:5px;
+    padding:10px;
+    
+}
+#button-flights span:first-child{
+    margin-right: 10px;
+    margin-left: 10px;
 }
 
 
@@ -77,18 +107,22 @@ a.formulario{
     border-radius: 16px;
     height: max-content;
     background-color: white;
+    border:orange solid;
 }
 .filtros input{
     height: 50px;
     border-style: none;
 }
+
 .busqueda-destino-formulario{
     display: flex;
     justify-content:space-evenly;
+    flex-wrap: wrap;
 }
 .busqueda-destino-formulario>div{
-    border-right: solid;
+    border: solid;
     border-color: orange;
+    
 }
 
 
@@ -115,6 +149,7 @@ a.formulario{
     border-style: none;
     background-color: #003b95;
     color:white;
+    width: 100%;
     height: 100%;
     
 }
