Dividido los css del header y del filtro de busqueda de alojamientos

--- a/PaginaWeb/css/style-carrito.css
+++ b/PaginaWeb/css/style-carrito.css
@@ -1,3 +1,4 @@
+@import "header.css";
 .reservas-carrito{
     display: grid;
     grid-template-areas: 
@@ -9,6 +10,7 @@
     margin:auto;
     
 }
+
 .pasos-carrito{
     grid-area:pasos;
     text-align: center;
