--- a/PaginaWeb/css/style-carrito.css
+++ b/PaginaWeb/css/style-carrito.css
@@ -9,6 +9,22 @@ body{
 .text-bold{
     font-weight: bold;
 }
+.text-small{
+    font-size: smaller;
+}
+
+.iconos svg{
+    width: 20px;
+    height: 20px;
+}
+
+.iconos{
+    margin-right: 8px;
+    box-sizing: border-box;
+    padding: 0;
+    display: inline-block;
+    vertical-align: middle;
+}
 
 .reservas-carrito{
     display: grid;
@@ -17,7 +33,7 @@ body{
     "side content";
     grid-template-columns: 1fr 2fr;
     gap: 10px;
-    max-width: 1200px;
+    max-width: 1100px;
     margin:auto;
     
 }
@@ -57,19 +73,19 @@ aside{
 .contenido-valoracion-apartamento{
     display: flex;
     align-items: center;
-    font-size: small;
+    font-size: smaller;
 
 }
 
 #valoracion-apartamento{
-    margin-right: 10px;
+    margin-right: 8px;
     background-color: blue;
-    align-items: center;
+    text-align: center;
     color:white;
-    padding:5px 5px 2px 5px;
+    padding:5px 5px 5px 5px;
     width: 20px;
     height: 20px;
-    border-radius: 10px 10px 10px 0px;
+    border-radius: 10px 10px 10px 10px;
 }
 
 
@@ -103,13 +119,31 @@ aside{
     border-color:rgba(0, 0, 0, 0.332);
 }
 
-.box-carrito a{
-    text-decoration: none;
-    
+.container-fecha:last-child{
+    padding:0px 0px 0px 16px;
 }
 
+#inf-precio-a-pagar{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: #006ae422;
+    margin: 0px -16px 0px -16px;
+    padding: 16px;
+}
+#totalAPagar{
+    text-align: right;
+}
 
+summary{
+    align-items: center;
+}
 
+details.detalle-info p{
+    display: flex;
+    justify-content: space-between;
+    font-size: small;
+}
 
 
 
