--- a/PaginaWeb/css/header.css
+++ b/PaginaWeb/css/header.css
@@ -3,14 +3,22 @@ body{
     margin:0;
 }
 .container-header{
-    background-color: var(--color-principal);
+    background-color: #003b95;
     color:white;
-
 }
+
+p, h1, h2, h3, h4, span, label, li, a, button {
+    font-family: BlinkMacSystemFont, -apple-system, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+}
+
 .container-header>*{
     max-width: 1100px;
     margin: 0px auto;
     
+}
+
+.container-header span {
+    color: white;
 }
 
 nav#cabecera-nav{
@@ -20,26 +28,31 @@ nav#cabecera-nav{
 }
 
 .title{
-    padding:8px 16px 8px;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    padding-right: 16px;
+    padding-left: 0;
 }
+
 .title a{
     color:white;
     text-decoration: none;
 }
+
 #botones-header{
     display:flex;
 }
+
 #img-bandera{
     border-radius: 50%;
     width: 24px;
     height: 24px;
 }
+
 header svg{
     fill:white;
     width: 20px;
-    height: 20px;
-    
-    
+    height: 20px;   
 }
 
 #botones-header{
@@ -69,18 +82,39 @@ header svg{
 }
 a.formulario{
     text-decoration: none;
-    color:#003b95;
+    color:#006ce4;
     background-color: white;
     border-radius: 2px;
     padding:4px 12px;
     margin:5px;
-    
-    
+    font-size: 14px;
 }
-.navegacion-flights{
+
+#enlaces-navegacion {
+    display: flex;
+}
+
+#enlaces-navegacion .navegacion-flights:first-child {
     border-radius: 32px;
-    border:white solid 3px;
+    border:white solid 1px;
+}
+
+.navegacion-flights{
     width: fit-content;
+    margin-right: 5px;
+}
+
+.navegacion-flights span {
+    font-size: 14px;
+}
+ 
+.navegacion-flights :hover{
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+    border-radius: 32px;
+}
+
+.navegacion-flights span:hover {
+    box-shadow: none;
 }
 
 #button-flights{
@@ -88,10 +122,12 @@ a.formulario{
     justify-content: space-evenly;
     color:white;
     text-decoration: none;
-    padding:10px;
+    padding-top: 11px;
+    padding-bottom: 9px;
+    padding-right: 16px;
+    padding-left: 16px;
     
 }
 #button-flights span:first-child{
-    margin-right: 10px;
-    margin-left: 10px;
+    margin-right: 7px;
 }
