--- a/PaginaWeb/css/style-reservas.css
+++ b/PaginaWeb/css/style-reservas.css
@@ -1,16 +1,20 @@
-
+@import "header.css";
+@import "buscador.css";
 *{
     box-sizing: border-box;
 }
-
-body{
+header{
+    padding-bottom: 10px;
+}
+.container-reservas{
     display: flex;
     flex-direction: column;
-    width: 80%;
+    max-width: 1100px;
     margin: auto;
+    padding-bottom: 20px;
     
 }
-header{
+#reservas{
     display: flex;
     justify-content: space-between;
     align-items: end;
