--- a/PaginaWeb/css/style-trendin-destinations.css
+++ b/PaginaWeb/css/style-trendin-destinations.css
@@ -1,12 +1,16 @@
+@import "header.css";
 *{
     box-sizing: border-box;
+}
+header{
+    padding-bottom: 10px;
 }
 body {
    
     font-family: 'Open Sans', sans-serif;
 }
 .container{
-    max-width: 1200px;
+    max-width: 1100px;
     margin: 0px auto;
 }
 
@@ -154,4 +158,40 @@ a img{
 }
 
 
+.filtros-contenedor{
+    display: flex;
+}
 
+.filtros-contenedor .boton-bg-blanco-shadow:nth-child(1){
+    border-radius: 32px;
+    border:white solid 1px;
+    color:#006ce4;
+    background-color: #006ae429;
+}
+.boton-bg-blanco-shadow{
+    cursor: pointer;
+    border-radius: 32px;
+    border: none;
+    margin: 10px;
+    display:flex;
+    justify-content: space-evenly;
+    text-decoration: none;
+    padding-top: 11px;
+    padding-bottom: 9px;
+    padding-right: 16px;
+    padding-left: 16px;
+}
+
+.boton-bg-blanco-shadow span:first-child{
+    margin-right: 7px;
+}
+
+.boton-bg-blanco-shadow:hover{
+    background-image: linear-gradient(to bottom, rgba(0, 108, 228, 0.5), rgba(0, 108, 228, 0));
+}
+
+.filtros-contenedor svg{
+    fill: black;
+    width: 20px;
+    height: 20px;
+}
