--- a/Entrega2/Booking_entrega2/src/main/webapp/css/buscador.css
+++ b/Entrega2/Booking_entrega2/src/main/webapp/css/buscador.css
@@ -12,6 +12,10 @@ form{
     width: 100%;
 }
 
+.item-busqueda input[type="text"]{
+    width: 80%;
+    
+}
 .item-busqueda input{
     height: 50px;
     width: 80%;
@@ -72,15 +76,12 @@ form{
 }
 
 .item-busqueda:nth-child(3){
-   flex:2;
-}
-.item-busqueda:nth-child(4){
    flex:3;
 }
 
 .item-boton-buscar{
     display: flex;
-    flex:2;    
+    flex:1;    
 }
 
 button.boton-buscar:hover {
