--- a/Entrega2/Booking_entrega2/src/main/webapp/css/listaAlojamientos.css
+++ b/Entrega2/Booking_entrega2/src/main/webapp/css/listaAlojamientos.css
@@ -1,5 +1,5 @@
 @import "style.css";
-
+@import "buscador.css";
 * {
     padding: 0;
     margin: 0;
@@ -228,7 +228,7 @@ input[type="checkbox"] {
 #lista-alojamientos li{
     font-size: 12px;
     padding-left: 10px;
-    font-weight: bold;
+    
 }
 
 #inferior-dcha {
