--- a/Entrega2/Booking_entrega2/src/main/webapp/css/listaAlojamientos.css
+++ b/Entrega2/Booking_entrega2/src/main/webapp/css/listaAlojamientos.css
@@ -139,6 +139,7 @@ input[type="checkbox"] {
 }
 
 .elem-loc {
+	position:relative;
     display: flex;
     padding: 15px;
     border: 1px solid #ddd; 
@@ -248,3 +249,15 @@ input[type="checkbox"] {
     font-size: 12px;
     color: #595959;
 }
+
+.elem-loc svg{
+    position:absolute;
+    left: 160px;
+    width: 30px;
+    height: 30px;
+    fill: #006ce4;
+    background-color: rgba(255, 255, 255, 0.808);
+    padding: 4px;
+    border-radius:50%;
+}
+
