Añadido funcionalidad de editar review Servlet y de observar en nuestro perfil (usuario) todas las reviews realizadas a cada alojamiento y poder editarlas. Falta realizar el servlet de eliminar review

--- a/Entrega2/Booking_entrega2/src/main/webapp/css/buttons.css
+++ b/Entrega2/Booking_entrega2/src/main/webapp/css/buttons.css
@@ -1,4 +1,4 @@
-
+@import "colors.css";
 .boton-bg-transparente{
     margin-right: 10px;
     padding: 5px;
@@ -23,7 +23,9 @@
     color:white;
     border-radius:10px;
     cursor: pointer;
-    width: 200px;
+    width: fit-content;
+    text-decoration:none;
+    padding: 5px;
 
 }
 .boton-bg-azul:hover{
