--- a/Entrega2/Booking_entrega2/src/main/webapp/css/header.css
+++ b/Entrega2/Booking_entrega2/src/main/webapp/css/header.css
@@ -16,7 +16,7 @@ p, h1, h2, h3, h4, span, label, li, a, button {
     font-family: BlinkMacSystemFont, -apple-system, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
 }
 
-main,.container-header{
+main,header>*{
     max-width: 1100px;
     margin: 0px auto;
     
