--- a/Entrega2/Booking_entrega2/src/main/webapp/css/detalleAlojamiento.css
+++ b/Entrega2/Booking_entrega2/src/main/webapp/css/detalleAlojamiento.css
@@ -41,6 +41,14 @@ h1 {
     padding: 16px;
 }
 
+#button-flights span {
+    color: #FFFFFF;
+}
+
+#enlaces-navegacion {
+	padding-bottom: 10px;
+}
+
 span {
     color: #262626;
 }
